-
Bug
-
Resolution: Done
-
P2: Important
-
6.0.0
-
None
-
Linux 4.19 on Debian 10, remote host runs Wayland
-
-
b23b12dcad8b204e490ea68be31c693d7d809a5b (qt/qtdeclarative/dev)
I start my application through VNC (`-platform vnc`). I get this error message.
If I do not specify the height/width it does work.
| For Gerrit Dashboard: QTBUG-89561 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 328281,5 | Add a platform capability indicating support for QRhi-based rendering | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 328283,5 | Make software backend fallback automatic with vnc and similar | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |